# klaipeda

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini  naming_convention.md
include/: application.h  ies.h  ipf.h  klaipeda.h  shared_formats.h  thread_pool.hpp  xac.h  xpm.h  xsm.h
include/ipf/: binary_reader.hpp  decompress.hpp  decrypt.hpp  ipf_reader.hpp  ipf_types.hpp  utils.hpp
src/: main.cpp  thread_pool.cpp
src/ipf/: binary_reader.cpp  decompress.cpp  decrypt.cpp  ipf_reader.cpp  ipf_types.cpp  utils.cpp
